--- a/main.scss
+++ b/main.scss
@@ -43,10 +43,10 @@
                         padding-left: 339px;
                     }
                     li:nth-child(3) {
-                        padding-right: 115px;
+                        padding-right: 103px;
                     }
                     li:nth-child(5) {
-                        padding-right: 375px;
+                        padding-right: 373px;
                     }
                 }
                 
@@ -112,7 +112,7 @@
                     font-family: 'Roboto', serif;
                     position: absolute;
                     right: 392px;
-                    width: 450px;
+                    width: 469px;
                     top: 70px;
                     text-align: right;
                     color: $primary-white;
@@ -186,6 +186,7 @@
                     border: none;
                     padding: 10px 22px 10px 20px;
                     font-weight: 400;
+                    color: $form-text;
                 }
                 
                 #formShadow {
